# husky_ur3_manipluator

./: husky_ur3_doc.docx  readme.md
backup(before 20.06.05)/husky_ur3_test_moveit_config/: CMakeLists.txt
husky_ur3_bringup/: CMakeLists.txt  package.xml
husky_ur3_bringup/config/: localization.yaml  ps4_teleop.yaml  ros_controllers.yaml  ur3_calibration.yaml
husky_ur3_bringup/launch/: husky_base.launch  husky_control.launch  husky_robot.launch  robot_complete.launch  sick_tim.launch  teleop.launch  ur3.launch  ur3_script.launch
husky_ur3_bringup/scripts/: launching_ur3.py  ros_control_enable_urp.py
husky_ur3_description/: CMakeLists.txt  package.xml
husky_ur3_description/launch/: description.launch  visualization.launch
husky_ur3_description/rviz/: husky_ur3.rviz
husky_ur3_description/urdf/: (backup)husky.urdf.xacro  decorations.urdf.xacro  husky.urdf.xacro  ur3.urdf.xacro  ur3_robot.urdf.xacro  wheel.urdf.xacro
husky_ur3_gazebo/config/: control.yaml
husky_ur3_gazebo/launch/: control.launch  husky_gaitech.launch  husky_playpen.launch  husky_ur3.launch  husky_ur3_house.launch
husky_ur3_gazebo/urdf/: husky.urdf.xacro  ur3_robot.urdf.xacro  wheel.urdf.xacro
husky_ur3_hj_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
husky_ur3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
husky_ur3_navigation/: CMakeLists.txt  package.xml
husky_ur3_navigation/rviz/: nav.rviz  (+1 more)
husky_ur3_robot/: CMakeLists.txt  package.xml
husky_ur3_test_moveit_config/: .setup_assistant  package.xml
teleop_code_test/: hj_teleop_twist_keyboard.py
(+121 files in other folders)
