<?xml version="1.0"?>
<package format="2">
  <name>husky_ur3_bringup</name>
  <version>0.0.0</version>
  <description>The husky_ur3_bringup package</description>

  <maintainer email="zakaria.chekakta@gaitech.co.kr">Zakaria Chekakta</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
